[ADD] - facebook share button

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -1,3 +1,3 @@
-.spacing.svelte-7i4fah{margin:2em 0}.btn-container.svelte-7i4fah{display:flex;flex-direction:column;width:100%;max-width:500px}button.svelte-7i4fah{cursor:pointer}i.svelte-7i4fah{text-align:center}
+.flex.svelte-1z0666y{display:flex}.spacing.svelte-1z0666y{margin:2em 0}.btn-container.svelte-1z0666y{flex-direction:column;width:100%;max-width:500px}button.svelte-1z0666y{cursor:pointer}i.svelte-1z0666y{text-align:center}
 
 /*# sourceMappingURL=bundle.css.map */
